# errbot-reminder

./: errbot-reminder.plug  errbot-reminder.py  pyproject.toml  reminder.plug  reminder.py  requirements.txt  test_reminder.py
.github/workflows/: python_test.yml
tests/: test_reminders.py
